--- a/src/Plugins/SmartStore.PayPal/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.PayPal/Localization/resources.en-us.xml
@@ -4,7 +4,23 @@
     <Value>PayPal Payment Methods</Value>
   </LocaleResource>
   <LocaleResource Name="Plugins.Description.SmartStore.PayPal" AppendRootKey="false">
-    <Value>Provides the PayPal payment methods PayPal Express, PayPal Standard and PayPal Direct.</Value>
+    <Value>Provides the PayPal payment methods PayPal Standard, PayPal Direct, PayPal Express and PayPal Plus.</Value>
+  </LocaleResource>
+
+  <LocaleResource Name="ConfigGroups">
+    <Value>API access;Data exchange;Miscellaneous</Value>
+  </LocaleResource>
+  <LocaleResource Name="ModeAuth">
+    <Value>Authorize immediately, debit later</Value>
+  </LocaleResource>
+  <LocaleResource Name="ModeAuthAndCapture">
+    <Value>Immediately debit</Value>
+  </LocaleResource>
+  <LocaleResource Name="ShowButtonInMiniShoppingCart">
+    <Value>Show button in mini shopping cart</Value>
+  </LocaleResource>
+  <LocaleResource Name="ShowButtonInMiniShoppingCart.Hint">
+    <Value>Soecifies to show the checkout button in the mini shopping cart.</Value>
   </LocaleResource>
 
   <LocaleResource Name="Plugins.Payments.PayPal" AppendRootKey="false">
@@ -334,4 +350,37 @@ Payment fee: {10}]]>
       </LocaleResource>
     </Children>
   </LocaleResource>
+
+  <LocaleResource Name="Plugins.FriendlyName.Payments.PayPalPlus" AppendRootKey="false">
+    <Value>PayPal Plus</Value>
+  </LocaleResource>
+  <LocaleResource Name="Plugins.Payments.PayPalPlus" AppendRootKey="false">
+    <Children>
+      <LocaleResource Name="AdminInstruction">
+        <Value>
+          <![CDATA[
+          <p>If you're using PayPal ensure that your primary store currency is supported by Paypal.</p>
+          <ol>
+          <li>Log into your PayPal account.</li>
+          <li>Click on <b>Profile</b> from the Home Menu.</li>
+          <li>Under <b>Account Information</b> choose <b>API Access</b>.</li>
+          <li>Choose <b>Request API credentials</b>.</li>
+          <li>Choose <b>API Signature</b> as the credential type.</li>
+          <li>Enable the checkbox and agree to the license <b>Terms-I agree to the API Certificate Terms of Use and terms incorporated therein</b> and press the Submit button.</li>
+          </ol>
+          <p>Before being able to receive IPN (Instant Payment Notification) messages (optional), you'll need to activate this service; follow these steps:</p>
+          <ol>
+          <li>Log in to your Premier or Business account.</li>
+          <li>Click the Profile subtab.</li>
+          <li>Click <b>Language Encoding</b> and <b>More options</b> and select UTF-8.</li>
+          <li>Click <b>Instant Payment Notification</b> in the Selling Preferences column.</li>
+          <li>Click the <b>Edit IPN Settings</b> button to update your settings.</li>
+          <li>Select <b>Receive IPN messages</b> (enabled) and enter the URL of your IPN handler (<b>https://www.yourStore.com/Plugins/SmartStore.PayPal/PayPalPlus/IPNHandler</b>).</li>
+          <li>Click <b>Save</b>, and you should get a message that you have successfully activated IPN.</li>
+          </ol>]]>
+        </Value>
+      </LocaleResource>
+    </Children>
+  </LocaleResource>
+
 </Language>
