--- a/src/Plugins/SmartStore.PayPal/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.PayPal/Localization/resources.de-de.xml
@@ -22,6 +22,9 @@
   <LocaleResource Name="CreateNow">
     <Value>Jetzt erstellen</Value>
   </LocaleResource>
+  <LocaleResource Name="UpdateNow">
+    <Value>Jetzt aktualisieren</Value>
+  </LocaleResource>
   <LocaleResource Name="ClientId">
     <Value>Client-ID</Value>
   </LocaleResource>
@@ -38,7 +41,7 @@
     <Value>Experience Profil-ID</Value>
   </LocaleResource>
   <LocaleResource Name="ExperienceProfileId.Hint">
-    <Value>Legt die Experience Profil-ID fest. Das Profil beinhaltet globale Daten wie z.B. Shop-Name und -Logo. Ein Profil braucht nur einmalig angelegt werden.</Value>
+    <Value>Legt die Experience Profil-ID fest. Das Profil beinhaltet globale Daten wie z.B. Shop-Name und -Logo. Ein Profil braucht nur einmalig angelegt werden. Über den Button können Sie ein neues Profil erstellen oder ein vorhandenes aktualisieren.</Value>
   </LocaleResource>
   
   <LocaleResource Name="Plugins.Payments.PayPal" AppendRootKey="false">
