--- a/src/Plugins/SmartStore.PayPal/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.PayPal/Localization/resources.en-us.xml
@@ -25,6 +25,9 @@
   <LocaleResource Name="UpdateNow">
     <Value>Update now</Value>
   </LocaleResource>
+  <LocaleResource Name="Other">
+    <Value>Miscellaneous</Value>
+  </LocaleResource>
   <LocaleResource Name="ClientId">
     <Value>Client ID</Value>
   </LocaleResource>
@@ -379,27 +382,12 @@ Payment fee: {10}]]>
     <Children>
       <LocaleResource Name="AdminInstruction">
         <Value>
-          <![CDATA[
-          <p>If you're using PayPal ensure that your primary store currency is supported by Paypal.</p>
-          <ol>
-          <li>Log into your PayPal account.</li>
-          <li>Click on <b>Profile</b> from the Home Menu.</li>
-          <li>Under <b>Account Information</b> choose <b>API Access</b>.</li>
-          <li>Choose <b>Request API credentials</b>.</li>
-          <li>Choose <b>API Signature</b> as the credential type.</li>
-          <li>Enable the checkbox and agree to the license <b>Terms-I agree to the API Certificate Terms of Use and terms incorporated therein</b> and press the Submit button.</li>
-          </ol>
-          <p>Before being able to receive IPN (Instant Payment Notification) messages (optional), you'll need to activate this service; follow these steps:</p>
-          <ol>
-          <li>Log in to your Premier or Business account.</li>
-          <li>Click the Profile subtab.</li>
-          <li>Click <b>Language Encoding</b> and <b>More options</b> and select UTF-8.</li>
-          <li>Click <b>Instant Payment Notification</b> in the Selling Preferences column.</li>
-          <li>Click the <b>Edit IPN Settings</b> button to update your settings.</li>
-          <li>Select <b>Receive IPN messages</b> (enabled) and enter the URL of your IPN handler (<b>https://www.yourStore.com/Plugins/SmartStore.PayPal/PayPalPlus/IPNHandler</b>).</li>
-          <li>Click <b>Save</b>, and you should get a message that you have successfully activated IPN.</li>
-          </ol>]]>
+          <![CDATA[<p>PayPal PLUS is a solution where PayPal offers PayPal, Credit Card, Direct Debit (ELV) and pay upon invoice as individual payment options on the payment selection page.
+Pay upon invoice may not be available for all merchants. PayPal PLUS is only available in Germany at the moment.</p>]]>
         </Value>
+      </LocaleResource>
+      <LocaleResource Name="MethodUnavailable">
+        <Value>Unfortunately we cannot offer you a PayPal PLUS payment method. Please try again later.</Value>
       </LocaleResource>
     </Children>
   </LocaleResource>
