--- a/src/Plugins/SmartStore.PayPal/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.PayPal/Localization/resources.en-us.xml
@@ -43,6 +43,9 @@
   <LocaleResource Name="ExperienceProfileId.Hint">
     <Value>Specifies the experience profile ID. The profile contains global data like shop name and logo. A profile needs to be created only once. Using the button, you can create a new profile or update an existing one.</Value>
   </LocaleResource>
+  <LocaleResource Name="PaymentExecuteFailed">
+    <Value>The execution of the payment has been declined by PayPal.</Value>
+  </LocaleResource>
 
   <LocaleResource Name="Plugins.Payments.PayPal" AppendRootKey="false">
     <Children>
